# tau

./: '  Cargo.nix  Cargo.toml  README.md  \  ]  flake.nix  pseudocode.md  thoughts.md  todo.md
src/: actions.rs  icon.rs  input.rs  main.rs  run.rs  style.css  utils.rs
