[package]
name = "tau"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuzzy-matcher = "0.3.7"
gio = "0.19.5"
glib = "0.19.6"
gtk4 = { version = "0.8.2", features = ["v4_12"] }
gtk4-layer-shell = "0.3.0"
regex = "1.10.4"
winit = "0.30.0"
xdg = "2.5.2"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
